Fix: vertical alignment

--- a/src/scss/custom-old/_base.scss
+++ b/src/scss/custom-old/_base.scss
@@ -15,6 +15,7 @@
 }
 
 .search-container {
+    margin: 0;
     input[type="search"]{
         @include box-sizing();
         @include border-radius(20px);
